<resources>
    <string name="ExpoLocalization_forcesRTL">unset</string>
    <string name="ExpoLocalization_supportsRTL">unset</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_description">Alert</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Steam Chat</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">Copy\n</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_open">Open DevTools</string>
    <string name="catalyst_debug_open_disabled">Connect to the bundler to debug JavaScript</string>
    <string name="catalyst_dev_menu_header">React Native Dev Menu (%1$s)</string>
    <string name="catalyst_dev_menu_sub_header">Running %1$s</string>
    <string name="catalyst_dismiss_button">Dismiss\n(ESC)</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector_toggle">Toggle Element Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_open_debugger_error">Failed to open DevTools. Please check that the dev server is running and reload the app.</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">Reload\n(R, R)</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_toggle">Toggle Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="default_media_controller_time">00:00</string>
    <string name="default_web_client_id">963564417316-19rmafc5uotdngr4bpv2rau84lr8rn9e.apps.googleusercontent.com</string>
    <string name="dev_launcher_error_details">This development build encountered the following error.</string>
    <string name="dev_launcher_error_header">There was a problem loading the project.</string>
    <string name="dev_launcher_go_to_home">Go to home</string>
    <string name="dev_launcher_reload">Reload</string>
    <string name="enter_fullscreen_mode">Enter fullscreen mode</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit_fullscreen_mode">Exit fullscreen mode</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
</resources>