<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#cc000000"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/skip_previous_button"
            android:contentDescription="@string/exo_controls_previous_description"
            style="@android:style/MediaButton.Previous"/>
        <ImageButton
            android:id="@+id/rewind_button"
            android:contentDescription="@string/exo_controls_rewind_description"
            style="@android:style/MediaButton.Rew"/>
        <ImageButton
            android:id="@+id/play_button"
            android:contentDescription="@string/exo_controls_play_description"
            style="@android:style/MediaButton.Play"/>
        <ImageButton
            android:id="@+id/fast_forward_button"
            android:contentDescription="@string/exo_controls_fastforward_description"
            style="@android:style/MediaButton.Ffwd"/>
        <ImageButton
            android:id="@+id/skip_next_button"
            android:contentDescription="@string/exo_controls_next_description"
            style="@android:style/MediaButton.Next"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:id="@+id/current_time_text"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_media_controller_time"
            android:paddingStart="10dp"
            android:paddingEnd="4dp"/>
        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:maxHeight="5dp"
            android:minHeight="5dp"
            android:layout_weight="1"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:id="@+id/end_time_text"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_media_controller_time"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"/>
        <ImageButton
            android:layout_gravity="top"
            android:id="@+id/fullscreen_mode_button"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:src="@drawable/ic_fullscreen_32dp"
            android:layout_weight="0"
            android:contentDescription="@string/enter_fullscreen_mode"
            android:paddingStart="6dp"
            android:paddingEnd="4dp"/>
    </LinearLayout>
</LinearLayout>
